--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,7 +1,6 @@
 @for (player of game.players; track player; let index = $index) {
-<app-player [ngStyle]="{'top.px' : 120 + (index * 95)}" class="player-positioning" [name]="player"></app-player>
+<app-player [ngStyle]="{'top.px' : 120 + (index * 70)}" class="player-positioning" [playerActive]="index == game.currentPLayer" [name]="player"></app-player>
 }
-
 
 <section>
     <div>
