--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -43,7 +43,7 @@ img {
 .player-positioning {
     position: absolute;
     width: 200px;
-    background-color: firebrick;
+    background-color: rgba(70, 70, 70);
     border-top-right-radius: 50px;
     border-bottom-right-radius: 50px;
 }
