--- a/src/app/game/player/player.component.html
+++ b/src/app/game/player/player.component.html
@@ -1,4 +1,4 @@
-<section>
+<section [class.player-active]="playerActive">
     <img src="./assets/img/profile.png" alt="">
     <span>{{ name }}</span>
 </section>
