--- a/src/app/game/player/player.component.scss
+++ b/src/app/game/player/player.component.scss
@@ -10,10 +10,14 @@ section{
     }
 
     >img {
-        height: 75px;
-        width: 75px;
+        height: 50px;
+        width: 50px;
         object-fit: cover;
         border-radius: 100%;
         margin-left: 24px;
     }
+}
+
+.player-active {
+    background-color: firebrick !important;
 }
